syntax = "proto3";

package org.project_planton.provider.azure.azurestorageaccount.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/azure/azurestorageaccount/v1/spec.proto";
import "org/project_planton/provider/azure/azurestorageaccount/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//azure-storage-account
message AzureStorageAccount {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'azure.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'AzureStorageAccount'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  AzureStorageAccountSpec spec = 4 [(buf.validate.field).required = true];

  //status
  AzureStorageAccountStatus status = 5;
}

//azure-storage-account status
message AzureStorageAccountStatus {
  //stack-outputs
  AzureStorageAccountStackOutputs outputs = 1;
}
