syntax = "proto3";

package org.project_planton.provider.azure.azurestorageaccount.v1;

import "org/project_planton/provider/azure/azurestorageaccount/v1/api.proto";
import "org/project_planton/provider/azure/provider.proto";

//azure-storage-account stack-input
message AzureStorageAccountStackInput {
  //target cloud-resource
  AzureStorageAccount target = 1;
  //provider-config
  org.project_planton.provider.azure.AzureProviderConfig provider_config = 2;
}
